--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Text Start -->
         <div class="col-6 text-center">
           <div class="titel">
-            <h1>API-01 stellt sich vor</h1>
+            <h1>API-02 stellt sich vor</h1>
           </div>
         </div>
         <!-- Text Ende -->
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-4">
           <img src="images/platzhalter.jpg" width="100%" height="auto" />
-          <a href="team/frank-ellerkamp.html"><h3>Reto Froelicher</h3></a>
+          <a href="team/frank-ellerkamp.html"><h3>Frank Ellerkamp</h3></a>
         </div>
       </div>
     </div>
