--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
       <div class="row">
         <div class="col-4">
           <img src="images/platzhalter.jpg" width="100%" height="auto" />
-          <a href="team/frank-ellerkamp.html"><h3>Mischa Barmettler</h3></a>
+          <a href="team/frank-ellerkamp.html"
+            ><h3>Mischaaaaaa Barmettler</h3></a
+          >
         </div>
       </div>
     </div>
