--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div class="col-4">
           <img src="images/platzhalter.jpg" width="100%" height="auto" />
           <a href="team/frank-ellerkamp.html"
-            ><h3>Mischaaaaaa Barmettler</h3></a
-          >
+            ><h3>Mischaaaaaa Barmettler</h3>
+          </a>
         </div>
       </div>
     </div>
