--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="col-4">
           <img src="images/platzhalter.jpg" width="100%" height="auto" />
           <a href="team/frank-ellerkamp.html"
-            ><h3>Mischaaaaaa Barmettler</h3>
+            ><h3>Mischaaaaaa Barmettler test</h3>
           </a>
         </div>
       </div>
